[gd_scene load_steps=2 format=3 uid="uid://dlv0tghnokaw3"]

[ext_resource type="Script" uid="uid://m23y5my2egph" path="res://scripts/UI/end_screen.gd" id="1_20kt3"]

[node name="Game_Over_Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_20kt3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.27022192, 0.27022192, 0.2702219, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -111.0
offset_right = 143.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "GAME OVER"
horizontal_alignment = 1

[node name="Neustart" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Neustarten"

[node name="Button_Main_Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Beenden" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Beenden"

[connection signal="pressed" from="VBoxContainer/Neustart" to="." method="_on_neustart_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Main_Menu" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Beenden" to="." method="_on_beenden_pressed"]
